Mise en place de la modal avec la création d'une réservation

--- a/GestionPlacesParking/Pages/Customs/Partials/_IndexModal.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Partials/_IndexModal.cshtml
@@ -2,11 +2,11 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <span id="error-message" class="text-danger"></span>
                 <h5 class="modal-title">Ajout d'une réservation</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
+                <span id="error-span" class="text-danger d-block mb-2"></span>
                 <label class="form-label">Nom du réservataire</label>
                 <div class="input-group mb-3">
                     <input class="form-control" id="reservingName" maxlength="50" />
