--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -1,7 +1,10 @@
 ﻿@page "/Index"
 @model GestionPlacesParking.Web.UI.Pages.Customs.IndexModel
 @inject LinkGenerator linkGenerator
+@inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 @{
+    var requestToken = Antiforgery.GetAndStoreTokens(HttpContext).RequestToken;
+    bool isReserved = false;
 }
 
 <h1 class="display-4">Places de parking</h1>
@@ -23,7 +26,7 @@
             {
                 <tr>
                     <td>@DayOfTheWeek.Key</td>
-                    @for (var i = Model.ParkingSlotList.First().Id; i < Model.ParkingSlotList.Count + 1; i++)
+                    @for (var i = Model.ParkingSlotList.First().Id; i < (Model.ParkingSlotList.Count + 1); i++)
                     {
                         @foreach (var Reservation in Model.ReservationList)
                         {
@@ -33,11 +36,19 @@
                             {
                                 @*Pas besoin d'injecter un ID pour reconnaitre car ne réserve pas pour un jour déjà réservé*@
                                 <td><button class="bg-danger">@Reservation.ReservingName</button></td>
+
+                                isReserved = true;
+                                break;
                             }
-                            else
-                            {
-                                <td><button id="@String.Format("{0}_{1}", DayOfTheWeek.Value, i)" class="bg-success p-3" onClick="openModal(event)"></button></td>
-                            }
+                        }
+
+                        if(!isReserved)
+                        {
+                            <td><button id="@String.Format("{0}_{1}", DayOfTheWeek.Value, i)" class="bg-success p-3" onClick="openModal(event)"></button></td>
+                        }
+                        else
+                        {
+                            isReserved = false;
                         }
                     }
                 </tr>
@@ -45,8 +56,9 @@
         }
     </tbody>
 </table>
+<input id="XSRF-TOKEN" type="hidden" value="@requestToken" />
 
-<partial name="Partials/_Modal" />
+<partial name="Partials/_IndexModal" />
 
 @section scripts {
     <script>
@@ -60,45 +72,57 @@
 
         function validModal() {
             newReservation();
-
-            myModal.hide();
         }
 
         async function newReservation() {
             const url = '@linkGenerator.GetPathByPage(HttpContext, "./Services/MakeReservationService")';
+            const token = document.getElementById("XSRF-TOKEN").value;
 
-            /*let bodyJson = new FormData();
-            bodyJson.append("json", JSON.stringify({ ReservingNames: "test" }));
+            const reservingName = document.getElementById('reservingName').value;
+            const reservationDateString = getIdClickedBtn.split('_')[0];
+            const parkingSlotId = parseInt(getIdClickedBtn.split('_')[1]);
+
+            const [day, month, year] = reservationDateString.split('/').map(Number);
+
+            const reservationDate = new Date(Date.UTC(year, (month - 1), day)).toISOString();
+
+            const bodyParams = {
+                ReservingName: reservingName,
+                ReservationDate: reservationDate,
+                ParkingSlotId: parkingSlotId
+            };
 
             let init = {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json; charset = utf-8;',
+                    'XSRF-TOKEN': token
                 },
-                body: bodyJson
+                body: JSON.stringify(bodyParams)
             };
 
-            const response = await fetch(url, init);*/
-
-            const reservingName = document.getElementById('reservingName').value;
-            const reservationDate = getIdClickedBtn.split('_')[0] + " 00:00:00";
-            const parkingSlotId = getIdClickedBtn.split('_')[1];
-
-            var date = new Date(reservationDate);
-
-            console.log(reservingName, reservationDate, parkingSlotId, date);
-
-            const urlParams = url + "?" + "ReservingName=" + reservingName + "&ReservationDate=" + reservationDate + "&ParkingSlotId=" + parkingSlotId;
-            const response = await fetch(urlParams);
-            const data = await response.json();
-
-            console.log(data);
-
-            return data;
+            const response = await fetch(url, init);
+            
+            if(response.ok)
+            {
+                //Rafraichi la page
+                location.reload();
+            }
+            else
+            {
+                const data = await response.json();
+                document.getElementById('error-span').innerHTML = data.message;
+            }
 
             /*$.ajax({
-                url: '@linkGenerator.GetPathByPage(HttpContext, "./Index")',
+                url: url,
                 method: 'POST',
+                contentType: 'application/json',
+                dataType: 'json',
+                data: JSON.stringify(params),
+                headers: {
+                    'XSRF-TOKEN': token
+                },
                 success: function (data) {
                     alert("Succès: " + data);
                 },
