Mise en place du Login Layout Correction bug dans la page de login

--- a/GestionPlacesParking/Pages/Customs/Login.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/login"
 @model GestionPlacesParking.Web.UI.Pages.Customs.LoginModel
 @{
+    Layout = "_LoginLayout";
 }
 
 <div class="row">
