--- a/GestionPlacesParking/Pages/Customs/Partials/_IndexModal.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Partials/_IndexModal.cshtml
@@ -6,11 +6,11 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <span id="error-span" class="text-danger d-block mb-2"></span>
                 <label class="form-label">Nom du réservataire</label>
-                <div class="input-group mb-3">
+                <div class="input-group mb-2">
                     <input class="form-control" id="reservingName" maxlength="50" />
                 </div>
+                <span id="error-span" class="text-danger"></span>
             </div>
             <div class="modal-footer">
                 <button id="btnModalValid" type="button" class="btn btn-primary" onclick="validModal()">Valider</button>
