--- a/GestionPlacesParking/Pages/Customs/Login.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Login.cshtml
@@ -7,9 +7,8 @@
 <div class="row">
     <div class="col-md-4">
         <form method="post">
-            <span class="text-danger">@Model.ErrorMessage</span>
             <div class="form-floating mb-4">
-                <input asp-for="User.Email" class="form-control" autocomplete="email" maxlength="50"/>
+                <input asp-for="User.Email" type="email" class="form-control" autocomplete="email" maxlength="50"/>
                 <label asp-for="User.Email" class="form-label"></label>
                 <span asp-validation-for="User.Email" class="text-danger"></span>
             </div>
@@ -18,6 +17,7 @@
                 <label asp-for="User.Password" class="form-label"></label>
                 <span asp-validation-for="User.Password" class="text-danger"></span>
             </div>
+            <span class="text-danger">@Model.ErrorMessage</span>
             <button type="submit" class="w-100 btn btn-lg btn-primary">Se connecter</button>
         </form>
     </div>
