--- a/GestionPlacesParking/Pages/Customs/Login.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Login.cshtml
@@ -19,7 +19,7 @@
                 <span asp-validation-for="User.Password" class="text-danger"></span>
                 <span class="text-danger">@Model.ErrorMessage</span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg">Se connecter</button>
+            <button type="submit" class="w-100 btn btn-lg btn-orange-apside">Se connecter</button>
         </form>
     </div>
 </div>
