--- a/GestionPlacesParking/Pages/Customs/Partials/_IndexModal.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Partials/_IndexModal.cshtml
@@ -13,8 +13,8 @@
                 <span id="error-span" class="text-danger"></span>
             </div>
             <div class="modal-footer">
-                <button id="btnModalValid" type="button" class="btn" onclick="validModal()">Valider</button>
-                <button type="button" class="btn close-btn" data-bs-dismiss="modal">Fermer</button>
+                <button id="btnModalValid" type="button" class="btn btn-orange-apside" onclick="validModal()">Valider</button>
+                <button type="button" class="btn close-btn btn-bleu-apside" data-bs-dismiss="modal">Fermer</button>
             </div>
         </div>
     </div>
