--- a/GestionPlacesParking/Pages/Shared/_Layout.cshtml
+++ b/GestionPlacesParking/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         </li>
                     </ul>
                     <a class="text-light" asp-area="" asp-page="/Customs/Logout">
-                        <button class="btn">
+                        <button class="btn btn-orange-apside">
                             <i class="fa-solid fa-right-from-bracket text-white"></i>
                         </button>
                     </a>
