--- a/GestionPlacesParking/Pages/Shared/_AdminLayout.cshtml
+++ b/GestionPlacesParking/Pages/Shared/_AdminLayout.cshtml
@@ -29,7 +29,7 @@
                     </ul>
 
                     <a class="text-light" asp-area="" asp-page="/Customs/Logout">
-                        <button class="btn">
+                        <button class="btn btn-orange-apside">
                             <i class="fa-solid fa-right-from-bracket text-white"></i>
                         </button>
                     </a>
