--- a/GestionPlacesParking/wwwroot/css/site.css
+++ b/GestionPlacesParking/wwwroot/css/site.css
@@ -2,6 +2,7 @@
     --orange-apside: #dc911b;
     --orange-hover-apside: #e8a742;
     --bleu-apside: #183650;
+    --bleu-hover-apside: #245077;
     --gris-apside: #f2f2f2;
 }
 
@@ -68,9 +69,7 @@ label {
 }​
 
 input[type=button], input[type=submit], input[type=checkbox]:checked, button, .apside-checkbox {
-    background-color: var(--orange-apside) !important;
     color: white !important;
-    border-style: none;
 }
 
 input[type=checkbox], .apside-checkbox {
@@ -78,20 +77,20 @@ input[type=checkbox], .apside-checkbox {
     border-color: #ced4da !important;
 }
 
-input[type=button]:hover, input[type=submit]:hover, button:hover {
-    background-color: var(--orange-hover-apside) !important;
-}
-
 .btn-orange-apside {
     background-color: var(--orange-apside) !important;
+}
+
+.btn-orange-apside:hover {
+    background-color: var(--orange-hover-apside) !important;
 }
 
 .btn-bleu-apside {
     background-color: var(--bleu-apside) !important;
 }
 
-.close-btn {
-    background-color: var(--bleu-apside) !important;
+.btn-bleu-apside:hover {
+    background-color: var(--bleu-hover-apside) !important;
 }
 
 a:hover {
