--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -63,7 +63,7 @@
 </table>
 <input id="XSRF-TOKEN" type="hidden" value="@requestToken" />
 
-<partial name="Partials/_IndexModal" />
+<partial name="Partials/_IndexMakeReservationModal" />
 
 @section scripts {
     <script>
