--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -18,7 +18,7 @@
     var requestToken = Antiforgery.GetAndStoreTokens(HttpContext).RequestToken;
 }
 
-<h1 class="display-4">Places de parking</h1>
+<h1 class="display-6">Places de parking du @Model.Day.DaysOfTheWeek.First() au @Model.Day.DaysOfTheWeek.ElementAt(4)</h1>
 <table class="table">
     <thead>
         <tr>
