--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -3,9 +3,10 @@
 @inject LinkGenerator linkGenerator
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 @{
-    var isAdmin = HttpContext.Session.GetInt32("IsAdmin");
+    int? isAdmin = HttpContext.Session.GetInt32("IsAdmin");
+    int? userId = HttpContext.Session.GetInt32("UserId");
 
-    if(isAdmin == 1)
+    if (isAdmin == 1)
     {
         Layout = "_AdminLayout";
     }
@@ -47,13 +48,25 @@
 
                         if (findReservation != null)
                         {
-                            @*Pas besoin d'injecter un ID pour reconnaitre car ne réserve pas pour un jour déjà réservé*@
-                            <td class="col-md-2 justify-content-center text-center"><button class="btn bg-danger">@findReservation.ReservingName</button></td>
+                            string style = (findReservation.ProprietaireId == userId) ? "btn-orange-apside" : "btn-danger";
+                            string isOwner = (findReservation.ProprietaireId == userId || isAdmin != null) ? "openDeleteReservationModal(event)" : "";
+                            var findParkingSlot = Model.ParkingSlotList.Find(
+                                x => x.Id == i
+                            );
+                            string formatStringForJs = String.Format("{0}_{1}_{2}_{3}_{4}", findParkingSlot.Label, DayOfTheWeek.Key, DayOfTheWeek.Value, findReservation.ProprietaireId, findReservation.Id);
+
+                            <td class="col-md-2 justify-content-center text-center">
+                                @*On inject l'ID de la réservation pour pouvoir ensuite la supprimer*@
+                                <button id="@formatStringForJs" class="btn @style" onClick="@isOwner">
+                                    @findReservation.ReservingName
+                                </button>
+                            </td>
                         }
                         else
                         {
+                            string dayAndReservationId = String.Format("{0}_{1}", DayOfTheWeek.Value, i);
                             @*On inject un ID pour le récupérer facilement dans le JS pour faire la requete de création d'une réservation*@
-                            <td class="col-md-2 justify-content-center text-center"><button id="@String.Format("{0}_{1}", DayOfTheWeek.Value, i)" class="btn bg-success p-3" onClick="openModal(event)"></button></td>
+                            <td class="col-md-2 justify-content-center text-center"><button id="@dayAndReservationId" class="btn bg-success p-3" onClick="openMakeReservationModal(event)"></button></td>
                         }
                     }
                 </tr>
@@ -64,18 +77,44 @@
 <input id="XSRF-TOKEN" type="hidden" value="@requestToken" />
 
 <partial name="Partials/_IndexMakeReservationModal" />
+<partial name="Partials/_IndexDeleteReservationModal" />
 
 @section scripts {
     <script>
-        let myModal = new bootstrap.Modal(document.getElementById('myModal'));
+        const makeReservationModal = new bootstrap.Modal(document.getElementById('makeReservationModal'));
+        const deleteReservationModal = new bootstrap.Modal(document.getElementById('deleteReservationModal'));
         let getIdClickedBtn = null;
 
-        function openModal(event) {
+        function openMakeReservationModal(event) {
             getIdClickedBtn = event.target.attributes.id.value;
-            myModal.show();
+            makeReservationModal.show();
         }
 
-        function validModal() {
+        function openDeleteReservationModal(event) {
+            getIdClickedBtn = event.target.attributes.id.value;
+
+            const modalBody = document.getElementById("delete-body-message");
+            const currentParkingSlot = getIdClickedBtn.split('_')[0];
+            const currentDay = getIdClickedBtn.split('_')[1];
+            const currentDate = getIdClickedBtn.split('_')[2];
+            const proprietaireId = getIdClickedBtn.split('_')[3];
+
+            //Si on est le propriétaire de la réservation
+            if (@userId == proprietaireId)
+            {
+                modalBody.innerHTML = "Voulez vous supprimer votre réservation de la place <b>" + currentParkingSlot + "</b> du <b>" + currentDay + " " + currentDate + "</b> ?";
+            }
+            else
+            {
+                //Si on est Admin on peut supperviser toutes les réservations
+                //L'admin aura accès a cette partie mais pas un user lambda
+                modalBody.innerHTML = "Voulez vous supprimer la réservation de <b>" + event.currentTarget.innerText + "</b> de la place <b>" + currentParkingSlot + "</b> du <b>" + currentDay + " " + currentDate + "</b> ?";
+            }
+            
+            deleteReservationModal.show();
+        }
+
+        function validMakeReservationModal() {
             newReservation();
         }
 
@@ -84,6 +123,7 @@
             const token = document.getElementById("XSRF-TOKEN").value;
 
             const reservingName = document.getElementById('reservingName').value;
+            const proprietaireId = parseInt('@userId') || 0;
             const reservationDateString = getIdClickedBtn.split('_')[0];
             const parkingSlotId = parseInt(getIdClickedBtn.split('_')[1]);
 
@@ -94,7 +134,8 @@
             const bodyParams = {
                 ReservingName: reservingName,
                 ReservationDate: reservationDate,
-                ParkingSlotId: parkingSlotId
+                ParkingSlotId: parkingSlotId,
+                proprietaireId: proprietaireId
             };
 
             let init = {
@@ -114,7 +155,42 @@
             }
             else {
                 const data = await response.json();
-                document.getElementById('error-span').innerHTML = data.message;
+                document.getElementById('make-error-span').innerHTML = data.message;
+            }
+        }
+
+        function validDeleteReservationModal() {
+            deleteOneReservation();
+        }
+
+        async function deleteOneReservation() {
+            const url = '@linkGenerator.GetPathByPage(HttpContext, "./Services/DeleteReservationService")';
+            const token = document.getElementById("XSRF-TOKEN").value;
+
+            const reservationId = parseInt(getIdClickedBtn.split('_')[4]);
+
+            const bodyParams = {
+                ReservationId: reservationId
+            };
+
+            let init = {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json; charset = utf-8;',
+                    'XSRF-TOKEN': token
+                },
+                body: JSON.stringify(bodyParams)
+            };
+
+            const response = await fetch(url, init);
+
+            if (response.ok) {
+                //Rafraichi la page
+                location.reload();
+            }
+            else {
+                const data = await response.json();
+                document.getElementById('delete-error-span').innerHTML = data.message;
             }
         }
     </script>
