--- a/GestionPlacesParking/Pages/Customs/Partials/_IndexMakeReservationModal.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Partials/_IndexMakeReservationModal.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="modal" id="myModal" tabindex="-1">
+﻿<div class="modal" id="makeReservationModal" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -10,10 +10,10 @@
                 <div class="input-group mb-2">
                     <input class="form-control" id="reservingName" maxlength="50" />
                 </div>
-                <span id="error-span" class="text-danger"></span>
+                <span id="make-error-span" class="text-danger"></span>
             </div>
             <div class="modal-footer">
-                <button id="btnModalValid" type="button" class="btn btn-orange-apside" onclick="validModal()">Valider</button>
+                <button type="button" class="btn btn-orange-apside" onclick="validMakeReservationModal()">Valider</button>
                 <button type="button" class="btn close-btn btn-bleu-apside" data-bs-dismiss="modal">Fermer</button>
             </div>
         </div>
