--- a/GestionPlacesParking/Pages/Customs/Partials/_IndexDeleteReservationModal.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Partials/_IndexDeleteReservationModal.cshtml
@@ -7,7 +7,9 @@
             </div>
             <div class="modal-body">
                 <div id="delete-body-message"></div>
-                <span id="delete-error-span" class="text-danger"></span>
+                <div class="pt-3">
+                    <span id="delete-error-span" class="text-danger"></span>
+                </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-orange-apside" onclick="validDeleteReservationModal()">Oui</button>
