Renommage du fichier ConnectionString 404 not found titre centré

--- a/GestionPlacesParking/Pages/Errors/404.cshtml
+++ b/GestionPlacesParking/Pages/Errors/404.cshtml
@@ -3,4 +3,4 @@
 @{
 }
 
-<h1>Erreur 404 : La page que vous cherchez est introuvable !</h1>
+<h1 class="text-center">Erreur 404 : La page que vous cherchez est introuvable !</h1>
