IdReservataire : int -> string Car Guid sur Keycloak Réagencement des fichiers Fichier de settings Keycloak en place pour être lu en JSON

--- a/GestionPlacesParking/Pages/Customs/Historique.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Historique.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/historique"
+﻿@page "/Historique"
 @model GestionPlacesParking.Web.UI.Customs.HistoriqueModel
 @{
     Layout = "_AdminLayout";
