--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -4,7 +4,7 @@
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 @{
     int? isAdmin = HttpContext.Session.GetInt32("IsAdmin");
-    int? userId = HttpContext.Session.GetInt32("UserId");
+    string? userId = HttpContext.Session.GetString("UserId");
 
     if (isAdmin == 1)
     {
