Variable env IsSso pour Switcher enter Keycloak ou la connexion normale Configuration de l'application pour gérer ces deux modes Modale automatisée pour la connexion SSO Amélioration du code

--- a/GestionPlacesParking/Pages/Customs/Partials/_IndexMakeReservationNoSsoModal.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Partials/_IndexMakeReservationNoSsoModal.cshtml
@@ -1,12 +1,13 @@
 ﻿<div class="modal" id="makeReservationModal" tabindex="-1">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Ajout d'une réservation</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <label class="form-label">Nom du réservataire</label>
+                <div id="make-no-sso-body-message" class="mb-2"></div>
+                <label class="form-label">Prenom et Nom du réservataire</label>
                 <div class="input-group mb-2">
                     <input class="form-control" id="reservingName" maxlength="50" />
                 </div>
