--- a/GestionPlacesParking/Pages/Shared/_Layout.cshtml
+++ b/GestionPlacesParking/Pages/Shared/_Layout.cshtml
@@ -25,9 +25,9 @@
                         </li>
                     </ul>
                     <a class="text-light" asp-area="" asp-page="/Customs/Logout">
-                        <button class="btn btn-orange-apside">
+                        <div class="btn btn-orange-apside">
                             <i class="fa-solid fa-right-from-bracket text-white"></i>
-                        </button>
+                        </div>
                     </a>
                 </div>
             </div>
