--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -1,11 +1,13 @@
 ﻿@page "/Index"
 @using GestionPlacesParking.Core.Global.Consts
+@using GestionPlacesParking.Core.Global.EnvironmentVariables.Envs
 @model GestionPlacesParking.Web.UI.Pages.Customs.IndexModel
 @inject LinkGenerator linkGenerator
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 @{
     int? isAdmin = HttpContext.Session.GetInt32(SessionConst.IsAdmin);
     string? userId = HttpContext.Session.GetString(SessionConst.UserId);
+    string? fullName = HttpContext.Session.GetString(SessionConst.FullName);
 
     if (isAdmin == 1)
     {
@@ -46,15 +48,16 @@
                             x => x.ReservationDate == DateTime.Parse(DayOfTheWeek.Value) &&
                             x.ParkingSlotId == i
                         );
+                        var findParkingSlot = Model.ParkingSlotList.Find(
+                            x => x.Id == i
+                        );
 
                         if (findReservation != null)
                         {
                             string style = (findReservation.ProprietaireId == userId) ? "btn-orange-apside" : "btn-danger";
                             string isOwner = (findReservation.ProprietaireId == userId || isAdmin != null) ? "openDeleteReservationModal(event)" : "";
-                            var findParkingSlot = Model.ParkingSlotList.Find(
-                                x => x.Id == i
-                            );
-                            string formatStringForJs = String.Format("{0}_{1}_{2}_{3}_{4}", findParkingSlot.Label, DayOfTheWeek.Key, DayOfTheWeek.Value, findReservation.ProprietaireId, findReservation.Id);
+
+                            string formatStringForJs = String.Format("{0}_{1}_{2}_{3}_{4}", findReservation.ProprietaireId, findParkingSlot.Label, DayOfTheWeek.Key, DateOnly.Parse(DayOfTheWeek.Value).ToString("dd/MM/yyyy"), findReservation.Id);
 
                             <td class="col-md-2 justify-content-center text-center">
                                 @*On inject l'ID de la réservation pour pouvoir ensuite la supprimer*@
@@ -65,7 +68,7 @@
                         }
                         else
                         {
-                            string dayAndReservationId = String.Format("{0}_{1}", DayOfTheWeek.Value, i);
+                            string dayAndReservationId = String.Format("{0}_{1}_{2}_{3}", findParkingSlot.Label, DayOfTheWeek.Key, DateOnly.Parse(DayOfTheWeek.Value).ToString("dd/MM/yyyy"), i);
                             @*On inject un ID pour le récupérer facilement dans le JS pour faire la requete de création d'une réservation*@
                             <td class="col-md-2 justify-content-center text-center"><button id="@dayAndReservationId" class="btn bg-success p-3" onClick="openMakeReservationModal(event)"></button></td>
                         }
@@ -77,7 +80,17 @@
 </table>
 <input id="XSRF-TOKEN" type="hidden" value="@requestToken" />
 
-<partial name="Partials/_IndexMakeReservationModal" />
+@if(IsSsoEnv.IsSso)
+{
+    @*On utilise la modal avec la connexion SSO*@
+    <partial name="Partials/_IndexMakeReservationSsoModal" />
+}
+else
+{
+    @*On utilise la modal sans la connexion SSO*@
+    <partial name="Partials/_IndexMakeReservationNoSsoModal" />
+}
+
 <partial name="Partials/_IndexDeleteReservationModal" />
 
 @section scripts {
@@ -115,6 +128,22 @@
 
         function openMakeReservationModal(event) {
             getIdClickedBtn = event.target.attributes.id.value;
+            const modalSsoBody = document.getElementById("make-sso-body-message");
+
+            const currentParkingSlot = getIdClickedBtn.split('_')[0];
+            const currentDay = getIdClickedBtn.split('_')[1];
+            const currentDate = getIdClickedBtn.split('_')[2];
+
+            //Si l'élément existe alors on est sur la modale SSO
+            if (modalSsoBody) {
+                modalSsoBody.innerHTML = "Voulez-vous ajouter une réservation de la place <b>" + currentParkingSlot + "</b> pour le <b>" + currentDay + " " + currentDate + "</b> ?";
+            }
+            else {
+                const modalNoSsoBody = document.getElementById("make-no-sso-body-message");
+
+                modalNoSsoBody.innerHTML = "Vous vous apprêtez à réserver la place <b>" + currentParkingSlot + "</b> pour le <b>" + currentDay + " " + currentDate + "</b>. <br/>Veuillez remplir le champ ci-dessous pour finaliser la réservation.";
+            }
+
             makeReservationModal.show();
         }
 
@@ -122,19 +151,19 @@
             getIdClickedBtn = event.target.attributes.id.value;
 
             const modalBody = document.getElementById("delete-body-message");
-            const currentParkingSlot = getIdClickedBtn.split('_')[0];
-            const currentDay = getIdClickedBtn.split('_')[1];
-            const currentDate = getIdClickedBtn.split('_')[2];
-            const proprietaireId = getIdClickedBtn.split('_')[3];
+            const proprietaireId = getIdClickedBtn.split('_')[0];
+            const currentParkingSlot = getIdClickedBtn.split('_')[1];
+            const currentDay = getIdClickedBtn.split('_')[2];
+            const currentDate = getIdClickedBtn.split('_')[3];
 
             //Si on est le propriétaire de la réservation
-            if ("@userId" == proprietaireId) {
-                modalBody.innerHTML = "Voulez vous supprimer votre réservation de la place <b>" + currentParkingSlot + "</b> du <b>" + currentDay + " " + currentDate + "</b> ?";
+            if (proprietaireId === "@userId") {
+                modalBody.innerHTML = "Voulez-vous supprimer votre réservation de la place <b>" + currentParkingSlot + "</b> du <b>" + currentDay + " " + currentDate + "</b> ?";
             }
             else {
                 //Si on est Admin on peut supperviser toutes les réservations
                 //L'admin aura accès a cette partie mais pas un user lambda
-                modalBody.innerHTML = "Voulez vous supprimer la réservation de <b>" + event.currentTarget.innerText + "</b> de la place <b>" + currentParkingSlot + "</b> du <b>" + currentDay + " " + currentDate + "</b> ?";
+                modalBody.innerHTML = "Voulez-vous supprimer la réservation de <b>" + event.currentTarget.innerText + "</b> de la place <b>" + currentParkingSlot + "</b> du <b>" + currentDay + " " + currentDate + "</b> ?";
             }
 
             deleteReservationModal.show();
@@ -147,12 +176,21 @@
         async function newReservation() {
             const url = '@linkGenerator.GetPathByPage(HttpContext, "./Services/Reservations/MakeReservationService")';
 
-            const reservingName = document.getElementById('reservingName').value;
-            const proprietaireId = '@userId' || 0;
-            const reservationDateString = getIdClickedBtn.split('_')[0];
-            const parkingSlotId = parseInt(getIdClickedBtn.split('_')[1]);
+            let reservingName = document.getElementById('reservingName');
 
-            const [year, month, day] = reservationDateString.split('/').map(Number);
+            //Si on est pas connecté au SSO
+            if (reservingName) {
+                reservingName = reservingName.value;
+            }
+            else {
+                reservingName = '@fullName';
+            }
+
+            const proprietaireId = '@userId' || '0';
+            const reservationDateString = getIdClickedBtn.split('_')[2];
+            const parkingSlotId = parseInt(getIdClickedBtn.split('_')[3]);
+
+            const [day, month, year] = reservationDateString.split('/').map(Number);
 
             const reservationDate = new Date(Date.UTC(year, (month - 1), day)).toISOString();
 
