--- a/GestionPlacesParking/Pages/Shared/_Layout.cshtml
+++ b/GestionPlacesParking/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-page="/Customs/Index">Accueil</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-page="/Customs/Profile">Mon Profile</a>
+                        </li>
                     </ul>
                     <a class="text-light" asp-area="" asp-page="/Customs/Logout">
                         <div class="btn btn-orange-apside">
