--- a/GestionPlacesParking/Pages/Customs/Index.cshtml
+++ b/GestionPlacesParking/Pages/Customs/Index.cshtml
@@ -1,28 +1,22 @@
 ﻿@page "/Index"
 @using GestionPlacesParking.Core.Global.Consts
 @using GestionPlacesParking.Core.Global.EnvironmentVariables.Envs
+@using GestionPlacesParking.Web.UI.CustomMethods
 @model GestionPlacesParking.Web.UI.Pages.Customs.IndexModel
 @inject LinkGenerator linkGenerator
 @inject Microsoft.AspNetCore.Antiforgery.IAntiforgery Antiforgery
 @{
+    Layout = CorrectLayoutCustomMethod.GetCorrectLayout(HttpContext);
+
     int? isAdmin = HttpContext.Session.GetInt32(SessionConst.IsAdmin);
     string? userId = HttpContext.Session.GetString(SessionConst.UserId);
     string? fullName = HttpContext.Session.GetString(SessionConst.FullName);
-
-    if (isAdmin == 1)
-    {
-        Layout = "_AdminLayout";
-    }
-    else
-    {
-        Layout = "_Layout";
-    }
 
     int MinId = Model.ParkingSlotList.First().Id;
     var requestToken = Antiforgery.GetAndStoreTokens(HttpContext).RequestToken;
 }
 
-<h1 class="display-6">Places de parking du @Model.Day.DaysOfTheWeek.Keys.First() @DateOnly.Parse(Model.Day.DaysOfTheWeek.Values.First()).ToString("dd/MM/yyyy") au @Model.Day.DaysOfTheWeek.Keys.ElementAt(4) @DateOnly.Parse(Model.Day.DaysOfTheWeek.Values.ElementAt(4)).ToString("dd/MM/yyyy")</h1>
+<h1 class="display-6">Places de parking du @Model.Day.DaysOfTheWeek.Keys.First() @Model.Day.DaysOfTheWeek.Values.First() au @Model.Day.DaysOfTheWeek.Keys.ElementAt(4) @Model.Day.DaysOfTheWeek.Values.ElementAt(4)</h1>
 <table class="table">
     <thead>
         <tr>
@@ -57,7 +51,7 @@
                             string style = (findReservation.ProprietaireId == userId) ? "btn-orange-apside" : "btn-danger";
                             string isOwner = (findReservation.ProprietaireId == userId || isAdmin != null) ? "openDeleteReservationModal(event)" : "";
 
-                            string formatStringForJs = String.Format("{0}_{1}_{2}_{3}_{4}", findReservation.ProprietaireId, findParkingSlot.Label, DayOfTheWeek.Key, DateOnly.Parse(DayOfTheWeek.Value).ToString("dd/MM/yyyy"), findReservation.Id);
+                            string formatStringForJs = String.Format("{0}_{1}_{2}_{3}_{4}", findReservation.ProprietaireId, findParkingSlot.Label, DayOfTheWeek.Key, DayOfTheWeek.Value, findReservation.Id);
 
                             <td class="col-md-2 justify-content-center text-center">
                                 @*On inject l'ID de la réservation pour pouvoir ensuite la supprimer*@
@@ -68,7 +62,7 @@
                         }
                         else
                         {
-                            string dayAndReservationId = String.Format("{0}_{1}_{2}_{3}", findParkingSlot.Label, DayOfTheWeek.Key, DateOnly.Parse(DayOfTheWeek.Value).ToString("dd/MM/yyyy"), i);
+                            string dayAndReservationId = String.Format("{0}_{1}_{2}_{3}", findParkingSlot.Label, DayOfTheWeek.Key, DayOfTheWeek.Value, i);
                             @*On inject un ID pour le récupérer facilement dans le JS pour faire la requete de création d'une réservation*@
                             <td class="col-md-2 justify-content-center text-center"><button id="@dayAndReservationId" class="btn bg-success p-3" onClick="openMakeReservationModal(event)"></button></td>
                         }
@@ -183,7 +177,9 @@ else
                 reservingName = reservingName.value;
             }
             else {
-                reservingName = '@fullName';
+                //On autorise rien, c'est côté back qu'on vérifie la personne
+                //Minimum 3 chars sinon il refuse
+                reservingName = 'useless';
             }
 
             const proprietaireId = '@userId' || '0';
